<resources>
    <string name="app_name">IO Portfolio</string>
    <string name="title_profile">Profile</string>
    <string name="title_work">Work</string>
    <string name="title_work_complete">Working Experiences</string>
    <string name="title_skill">Skills</string>
    <string name="title_skill_complete">Technical &amp; Personal Skills</string>
    <string name="title_study">Study</string>
    <string name="title_study_complete">Study &amp; Certifications</string>
    <string name="title_contact">Contacts</string>
    <string name="profile_name">Irine Octaviana</string>
    <string name="profile_summary">Junior Game Programmer over 4 years of experience in Android porting game in AAA\'s studio. Experienced with Android feature implementation and bug fixing. Enthusiast with build multiple platform and new features technology. Bring good positive atmosphere in team working. Taking Informatics linear education. Certified in programming class.</string>
    <string name="contact_subhead">Stay in touch…</string>
    <string name="contact_email">irineoctaviana@yahoo.com</string>
    <string name="contact_phone">+6285755258855</string>
    <string name="contact_whatsapp">+6285755258855</string>
    <string name="contact_linkedin">https://www.linkedin.com/in/irine-octaviana-b95293a2/</string>
    <string name="contact_github">https://github.com/chayouwGurlz/</string>
    <string name="contact_location">Jl. Rajawali Gang Parkit No. 6, Depok, Sleman, DI Yogyakarta, Indonesia</string>
    <string name="contact_info">PS: Click text for more info</string>

    <string-array name="work_title">
        <item>March Of Empires, Gameloft (2015 – 2016)</item>
        <item>Uno And Friends, Gameloft (2016 – 2017)</item>
        <item>Dead Rivals, Gameloft (2017 – 2018)</item>
        <item>2D Point Car Rush Prototype, Side Project Contest (2018)</item>
        <item>Research and Development, Gameloft (2018)</item>
        <item>My Little Pony, Gameloft (2018 – 2019)</item>
        <item>Foodies, Gameloft (2019)</item>
    </string-array>

    <string-array name="foodies_description">
        <item>Implement tracking in UWP (Universal Windows Platform)</item>
        <item>Implement ads in UWP</item>
        <item>Implement UWP landscape design</item>
        <item>Bug fix forbidden identifier (GDPR / COPPA)</item>
        <item>Documentation from previous implementation</item>
        <item>Project introduction documentation</item>
    </string-array>

    <string-array name="mlp_description">
        <item>Bug fix gaming CRM</item>
        <item>Bug fix ads</item>
        <item>Bug fix audio</item>
        <item>Bug fix crash test</item>
        <item>Bug fix interrupt test</item>
        <item>Merging source code with other platform</item>
        <item>Customer care technical support</item>
    </string-array>

    <string-array name="rnd_description">
        <item>Ads documentation</item>
        <item>Tracking documentation</item>
        <item>Google Firebase instrumentation test</item>
        <item>Google Firebase game loop test</item>
        <item>Google Firebase pre-launch reports</item>
        <item>Documentation from previous research</item>
    </string-array>

    <string-array name="pcr_description">
        <item>Idea founder</item>
        <item>Implement UI</item>
        <item>Bug fix multiplayer logical part </item>
    </string-array>

    <string-array name="dr_description">
        <item>Implement Android specific features (back key, virtual keyboard, ultrawide UI)</item>
        <item>Implement ads</item>
        <item>Bug fix simple crash test</item>
        <item>Bug fix forbidden identifier (GDPR / COPPA)</item>
        <item>Customer care technical support</item>
        <item>Check and add item data on gaming CRM</item>
        <item>Documentation from previous implementation</item>
    </string-array>

    <string-array name="uno_description">
        <item>Bug fix Push Notification</item>
        <item>Bug fix tracking data</item>
        <item>Bug fix UI Android installer</item>
        <item>Optimization UI on low devices</item>
        <item>Bug fix ads</item>
        <item>Implement Google IAP Redeem</item>
    </string-array>

    <string-array name="moe_description">
        <item>Bug fix UI Flash</item>
        <item>Bug fix back key Android</item>
    </string-array>

    <string-array name="skill_title">
        <item>Game Engines</item>
        <item>Frameworks</item>
        <item>UI Automation Framework</item>
        <item>Bug Tracker</item>
        <item>Scrum Tools</item>
        <item>Back-end Platform</item>
        <item>Version Control System</item>
        <item>Programming Languages</item>
        <item>Documentation</item>
        <item>IDE Applications</item>
        <item>Office Applications</item>
        <item>Operating Systems</item>
        <item>Personal Skills</item>
    </string-array>

    <string-array name="skill_description">
        <item>Unreal Engine, Unity</item>
        <item>Xamarin</item>
        <item>AirTest</item>
        <item>Atlassian Jira</item>
        <item>Atlassian Jira, Atlassian Trello</item>
        <item>Microsoft Azure PlayFab</item>
        <item>Apache Subversion (SVN), GitLab, Atlassian Bitbucket</item>
        <item>C++, Java Android, C#, Kotlin</item>
        <item>Atlassian Confluence</item>
        <item>Microsoft Visual Studio, Android Studio, IntelliJ IDEA</item>
        <item>Google Docs, Microsoft Office, Libre Office</item>
        <item>Microsoft Windows, Ubuntu</item>
        <item>Adaptable, Self Learner, Team Working, Enthusiasm, Willingness to learn, Goal Oriented</item>
    </string-array>

    <string-array name="study_title">
        <item>Computer Engineering</item>
        <item>Informatics, Software Engineering Concentration</item>
        <item>C++ Programmer Technical Guidance</item>
        <item>Belajar Membuat Aplikasi Android untuk Pemula</item>
        <item>Memulai Pemrograman dengan Kotlin</item>
        <item>Beginner English Corner</item>
    </string-array>

    <string-array name="study_description">
        <item>Telkom Sandhy Putra Vocational High School</item>
        <item>Brawijaya University</item>
        <item>Gameloft Indonesia</item>
        <item>Dicoding</item>
        <item>Dicoding</item>
        <item>Gameloft x Pandu Indonesian Language Course</item>
    </string-array>

    <string-array name="study_year">
        <item>2007 – 2010</item>
        <item>2010 – 2014</item>
        <item>2015</item>
        <item>2019 – 2022</item>
        <item>2019 – 2022</item>
        <item>2019</item>
    </string-array>

    <string-array name="study_link">
        <item>https://app.box.com/s/pqbvtr7aysjfwmelfk3hvo2eb1xjxe66</item>
        <item>https://app.box.com/s/f3tjm4371ai4igq37r1kka87abeabo62</item>
        <item>https://app.box.com/s/865060w002ns2hlcanb8d549wmpijuid</item>
        <item>https://app.box.com/s/m1ikp0m8df8idomyjzvowndy7p60oqb3</item>
        <item>https://app.box.com/s/eepnaoyuelzrr1ky7xry5sy0izho1frb</item>
        <item>https://app.box.com/s/os9ijg3vl33priy5z5pqm6i2smdjiz3f</item>
    </string-array>
</resources>
