<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ciaocollect.ioportfolio.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_work"
        android:name="com.ciaocollect.ioportfolio.ui.work.WorkFragment"
        android:label="@string/title_work_complete"
        tools:layout="@layout/fragment_work" />

    <fragment
        android:id="@+id/navigation_skill"
        android:name="com.ciaocollect.ioportfolio.ui.skill.SkillFragment"
        android:label="@string/title_skill_complete"
        tools:layout="@layout/fragment_skill" />

    <fragment
        android:id="@+id/navigation_study"
        android:name="com.ciaocollect.ioportfolio.ui.study.StudyFragment"
        android:label="@string/title_study_complete"
        tools:layout="@layout/fragment_study" />

    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.ciaocollect.ioportfolio.ui.contact.ContactFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_contact" />
</navigation>